--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	 version="3.0">
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     
+    <filter>
+        <filter-name>AjaxWeldContextFilter</filter-name>
+        <filter-class>com.knitelius.basic.angularjsee.web.filter.AjaxWeldContextFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>AjaxWeldContextFilter</filter-name>
+        <url-pattern>/resources/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+        <dispatcher>ERROR</dispatcher>
+    </filter-mapping>
+    
+    <!-- JEE7
     <filter-mapping>
       <filter-name>CDI Conversation Filter</filter-name>
       <url-pattern>/resources/*</url-pattern>
    </filter-mapping>
+    -->
 </web-app>
